--- a/eudevfin/dim/src/main/webapp/WEB-INF/web.xml
+++ b/eudevfin/dim/src/main/webapp/WEB-INF/web.xml
@@ -27,7 +27,7 @@
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>
-			classpath:**/*Context.xml
-		</param-value>
+	classpath*:**/*Context.xml	
+    </param-value>
   </context-param>
 </web-app>
