--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -12,6 +12,7 @@
 	<properties>
 		<maven.test.failure.ignore>true</maven.test.failure.ignore>
 		<spring.framework.version>3.2.4.RELEASE</spring.framework.version>
+		<spring.integration.version>2.2.5.RELEASE</spring.integration.version>
 		<jetty.version>9.0.5.v20130815</jetty.version>
 		<wicket.version>6.10.0</wicket.version>
 		<spring.security.version>3.1.4.RELEASE</spring.security.version>
@@ -126,7 +127,7 @@
   		<dependency>
   			<groupId>org.springframework.integration</groupId>
   			<artifactId>spring-integration-core</artifactId>
-  			<version>2.2.5.RELEASE</version>
+  			<version>${spring.integration.version}</version>
   		</dependency>
   		<dependency>
   			<groupId>org.springframework</groupId>
@@ -143,9 +144,39 @@
   			<artifactId>aspectjtools</artifactId>
   			<version>1.7.3</version>
   		</dependency>
+  		<dependency>
+  			<groupId>org.springframework.integration</groupId>
+  			<artifactId>spring-integration-jpa</artifactId>
+  			<version>${spring.integration.version}</version>
+  		</dependency>
+  		<dependency>
+  			<groupId>de.agilecoders.wicket</groupId>
+  			<artifactId>wicket-bootstrap-core</artifactId>
+  			<version>0.8.4</version>
+  		</dependency>
+  		<dependency>
+  			<groupId>de.agilecoders.wicket</groupId>
+  			<artifactId>wicket-bootstrap-extensions</artifactId>
+  			<version>0.8.4</version>
+  		</dependency>
+  		<dependency>
+  			<groupId>de.agilecoders.wicket</groupId>
+  			<artifactId>wicket-bootstrap-themes</artifactId>
+  			<version>0.8.4</version>
+  		</dependency>
+  		<dependency>
+  			<groupId>org.apache.wicket</groupId>
+  			<artifactId>wicket-extensions</artifactId>
+  			<version>${wicket.version}</version>
+  		</dependency>
+  		<dependency>
+  			<groupId>org.eclipse.jetty</groupId>
+  			<artifactId>jetty-util</artifactId>
+  			<version>${jetty.version}</version>
+  		</dependency>
 	</dependencies>
 
-	<build>
+	<build>	
 		<plugins>
 
 <!-- 		<plugin>
@@ -171,17 +202,19 @@
 					
 				</configuration>
 			</plugin>
+						
 			<plugin>
   				<groupId>org.eclipse.jetty</groupId>
   				<artifactId>jetty-maven-plugin</artifactId>
   				<version>${jetty.version}</version>
   				<configuration>
-    				<scanIntervalSeconds>10</scanIntervalSeconds>
+    				<scanIntervalSeconds>10</scanIntervalSeconds>    				
     				<webApp>
-	      				<contextPath>/</contextPath>
+	      				<contextPath>/</contextPath>	      				
     				</webApp>
+    				
   				</configuration>
-			</plugin>
+			</plugin>  			
 		</plugins>
 		<pluginManagement>
 			<plugins>
@@ -282,4 +315,17 @@
 		<module>dim</module>
 		<module>core</module>
 	</modules>
+	<inceptionYear>2013</inceptionYear>
+	<organization>
+		<name>Development Gateway</name>
+		<url>http://developmentgateway.org</url>
+	</organization>
+	<issueManagement>
+		<system>JIRA</system>
+		<url>https://jira.dgfoundation.org/browse/ODAEU</url>
+	</issueManagement>
+	<ciManagement>
+		<system>Jenkins</system>
+		<url>https://ci.ampdev.net</url>
+	</ciManagement>
 </project>
