--- a/eudevfin/dim/.classpath
+++ b/eudevfin/dim/.classpath
@@ -20,6 +20,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/eudevfin"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/eudevfin-persistence"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
