--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -17,6 +17,7 @@
 		<wicket.version>6.10.0</wicket.version>
 		<spring.security.version>3.1.4.RELEASE</spring.security.version>
 		<servlet.api.version>3.1.0</servlet.api.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
@@ -179,27 +180,14 @@
 	<build>	
 		<plugins>
 
-<!-- 		<plugin>
-			    <groupId>org.codehaus.enunciate</groupId>
-			    <artifactId>maven-enunciate-spring-plugin</artifactId>
-			    <version>1.27</version>
-			    <executions>
-			      <execution>
-			        <goals>
-			          <goal>assemble</goal>
-			        </goals>
-			      </execution>
-			    </executions>
-			</plugin>
--->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
-					
+				<version>2.3.2</version>				
+				<configuration>				
+					<source>1.7</source>
+					<target>1.7</target>
+					<debug>true</debug>
 				</configuration>
 			</plugin>
 						
