refactored the projects based on disussions

--- a/eudevfin/dim/pom.xml
+++ b/eudevfin/dim/pom.xml
@@ -9,6 +9,7 @@
      mpostelnicu
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.devgateway.eudevfin</groupId>
@@ -18,19 +19,14 @@
   <artifactId>dim</artifactId>
   <packaging>war</packaging>
   
+  
   <dependencies>
     <dependency>
       <groupId>org.devgateway.eudevfin</groupId>
-      <artifactId>core</artifactId>
+      <artifactId>common-financial</artifactId>
       <version>${project.version}</version>
     </dependency>
-    <dependency>
-      <groupId>org.devgateway.eudevfin</groupId>
-      <artifactId>persistence</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-
-  </dependencies>
+   </dependencies>
   
   <build>
       <resources>
@@ -48,6 +44,7 @@
                   <exclude>**/*.java</exclude>
               </excludes>
           </resource>
+		
       </resources>
       <plugins>
           <plugin>
