made the new layout work properly, with common dependencies

--- a/eudevfin/dim/pom.xml
+++ b/eudevfin/dim/pom.xml
@@ -26,6 +26,11 @@
       <artifactId>common-financial</artifactId>
       <version>${project.version}</version>
     </dependency>
+ 	<dependency>
+      <groupId>org.devgateway.eudevfin</groupId>
+      <artifactId>financial</artifactId>
+      <version>${project.version}</version>
+    </dependency>    
    </dependencies>
   
   <build>
