--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -110,21 +110,11 @@
   			<version>${wicket.version}</version>
   		</dependency>
 
-  		<dependency>
-  			<groupId>org.springframework.data</groupId>
-  			<artifactId>spring-data-jpa</artifactId>
-  			<version>1.4.1.RELEASE</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.liquibase</groupId>
-  			<artifactId>liquibase-core</artifactId>
-  			<version>3.0.4</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.springframework.data</groupId>
-  			<artifactId>spring-data-rest-core</artifactId>
-  			<version>1.0.0.RELEASE</version>
-  		</dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>3.0.4</version>
+        </dependency>
   		<dependency>
   			<groupId>org.springframework.integration</groupId>
   			<artifactId>spring-integration-core</artifactId>
@@ -170,6 +160,12 @@
   			<artifactId>wicket-extensions</artifactId>
   			<version>${wicket.version}</version>
   		</dependency>
+        <dependency>
+            <groupId>org.wicketstuff</groupId>
+            <artifactId>wicketstuff-annotation</artifactId>
+            <version>${wicket.version}</version>
+        </dependency>
+
   		<dependency>
   			<groupId>org.eclipse.jetty</groupId>
   			<artifactId>jetty-util</artifactId>
