--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -57,6 +57,7 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -171,6 +172,11 @@
   			<artifactId>jetty-util</artifactId>
   			<version>${jetty.version}</version>
   		</dependency>
+  		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>	
@@ -298,6 +304,8 @@
 		<module>common-financial</module>		
 		<module>dim</module>
 		<module>financial</module>
+		<module>auth</module>
+		<module>common-auth</module>
 	</modules>
 	<inceptionYear>2013</inceptionYear>
 	<organization>
