auth module with jdbc users - first version . derby startup sql included by not ported yet from HSQLDB

--- a/eudevfin/auth/pom.xml
+++ b/eudevfin/auth/pom.xml
@@ -13,6 +13,13 @@
       <artifactId>financial</artifactId>
       <version>${project.version}</version>
     </dependency>    
+    
+    <dependency>
+      <groupId>org.devgateway.eudevfin</groupId>
+      <artifactId>common-auth</artifactId>
+      <version>${project.version}</version>
+    </dependency>    
+    
   </dependencies>
   <name>EU-DEVFIN authentication module</name>
 </project>
