--- a/eudevfin/auth/.settings/com.springsource.sts.config.flow.prefs
+++ b/eudevfin/auth/.settings/com.springsource.sts.config.flow.prefs
@@ -1,2 +1,2 @@
-//com.springsource.sts.config.flow.coordinates\:http\://www.springframework.org/schema/integration\:/eudevfin-auth/src/main/resources/META-INF/authContext.xml=<?xml version\="1.0" encoding\="UTF-8"?>\n<graph/>
+//com.springsource.sts.config.flow.coordinates\:http\://www.springframework.org/schema/integration\:/eudevfin-auth/src/main/resources/META-INF/authContext.xml=<?xml version\="1.0" encoding\="UTF-8"?>\r\n<graph/>
 eclipse.preferences.version=1
