--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -50,6 +50,12 @@
 			<version>10.10.1.1</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derbyclient</artifactId>
+			<version>10.10.1.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>4.2.6.Final</version>
