--- a/eudevfin/dim/src/main/webapp/WEB-INF/web.xml
+++ b/eudevfin/dim/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,11 @@
   Contributors:
      mpostelnicu
 -->
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="eudevfin-forms" version="3.1">
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+  version="2.5"> 
+  
   <display-name>eudevfin-dim</display-name>
   <filter>
     <filter-name>springSecurityFilterChain</filter-name>
