--- a/eudevfin/cda/.classpath
+++ b/eudevfin/cda/.classpath
@@ -33,7 +33,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/robochef-0.9.6.jar"/>
-	<classpathentry kind="lib" path="lib/cda-core-TRUNK-SNAPSHOT.jar" sourcepath="/cda-core/src"/>
-	<classpathentry kind="src" path="test-resources"/>
+	<classpathentry kind="lib" path="lib/cda-core-TRUNK-SNAPSHOT.jar" sourcepath="/cda-core"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
