--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -189,6 +189,11 @@
 			<artifactId>commons-dbcp</artifactId>
 			<version>1.4</version>
 		</dependency>
+  		<dependency>
+  			<groupId>simple-jndi</groupId>
+  			<artifactId>simple-jndi</artifactId>
+  			<version>0.11.4.1</version>
+  		</dependency>
 	</dependencies>
 
 	<build>	
