--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -16,6 +16,7 @@
 		<spring.datajpa.version>1.4.1.RELEASE</spring.datajpa.version>
 		<jetty.version>9.0.6.v20130930</jetty.version>
 		<wicket.version>6.10.0</wicket.version>
+		<hibernate.core.version>4.2.6.Final</hibernate.core.version>
 		<spring.security.version>3.1.4.RELEASE</spring.security.version>
 		<servlet.api.version>3.1.0</servlet.api.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -58,7 +59,12 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>4.2.6.Final</version>
+			<version>${hibernate.core.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-envers</artifactId>
+			<version>${hibernate.core.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
