--- a/eudevfin/cda/pom.xml
+++ b/eudevfin/cda/pom.xml
@@ -1,3 +1,14 @@
+<!--
+  ~ Copyright (c) 2013 Development Gateway.
+  ~ All rights reserved. This program and the accompanying materials
+  ~ are made available under the terms of the GNU Public License v3.0
+  ~ which accompanies this distribution, and is available at
+  ~ http://www.gnu.org/licenses/gpl.html
+  ~
+  ~ Contributors:
+  ~    aartimon
+  -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -121,9 +132,14 @@
       <version>1.2.8</version>
       
     </dependency>
-    
-    
-    
+
+
+    <dependency>
+        <groupId>pt.webdetails</groupId>
+        <artifactId>cda-core</artifactId>
+        <version>trunk</version>
+        <systemPath>${project.basedir}/lib/cda-core-TRUNK-SNAPSHOT.jar</systemPath>
+    </dependency>
     
     
     
