renamed cda to cda-wrapper to avoid clash with cda artifact from pt.webdetails

--- a/eudevfin/cda-wrapper/.project
+++ b/eudevfin/cda-wrapper/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>eudevfin-cda</name>
+	<name>cda-wrapper</name>
 	<comment></comment>
 	<projects>
 	</projects>
