--- a/eudevfin/cda-wrapper/pom.xml
+++ b/eudevfin/cda-wrapper/pom.xml
@@ -6,25 +6,31 @@
     <version>0.0.1.CI-SNAPSHOT</version>
   </parent>
   <artifactId>cda-wrapper</artifactId>
-  
+
+
+
   <repositories>
-  
-  		<repository>        
-          <id>pentaho-mvn</id>
-          <name>Pentaho Maven Repo</name>
-         <url>http://repository.pentaho.org/artifactory/repo/</url>
-        </repository>
-	
-		<repository>        
-          <id>analytical-labs</id>
-          <name>Analytical Labs Repo</name>
-         <url>http://repo.analytical-labs.com/alabs-snapshot-local</url>
-        </repository>
-	
+
 	
   </repositories>
   
-  
+  <dependencyManagement>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.jvnet.staxex</groupId>
+  		<artifactId>stax-ex</artifactId>
+  		<version>1.1</version>
+  	</dependency>
+
+  	<dependency>
+  		<groupId>org.apache.ws.commons.neethi</groupId>
+  		<artifactId>neethi</artifactId>
+  		<version>2.0.1</version>
+  		<type>jar</type>
+  	</dependency>
+
+  </dependencies>
+  </dependencyManagement>
     <dependencies>
     
      	<dependency>
@@ -38,9 +44,25 @@
       <artifactId>common-auth</artifactId>
       <version>${project.version}</version>
     </dependency>    
-    
-    
-    
+
+
+   <dependency>
+     	<groupId>pentaho</groupId>
+     	<artifactId>cda</artifactId>
+     	<version>5.0.1</version>
+     </dependency>
+
+
+ <!-- 
+<dependency>
+     	<groupId>pentaho</groupId>
+     	<artifactId>cpf</artifactId>
+     	<version>5.0.1</version>
+     </dependency>
+ -->
+ 
+  
+
     <dependency>
       <groupId>com.hazelcast</groupId>
       <artifactId>hazelcast</artifactId>
@@ -121,102 +143,24 @@
       <version>1.2.8</version>
       
     </dependency>
-
-
-    <dependency>
-        <groupId>pt.webdetails</groupId>
-        <artifactId>cda-core</artifactId>
-        <version>trunk</version>
-        <scope>system</scope>
-        <systemPath>${project.basedir}/lib/cda-core-TRUNK-SNAPSHOT.jar</systemPath>
-    </dependency>
     
     
-    
-    
-    
-  
-    <dependency>
+       <dependency>
       <groupId>pt.webdetails</groupId>
       <artifactId>cpf-core</artifactId>
-      <version>TRUNK-SNAPSHOT</version>
-  
-  
+      <version>13.09.10</version>
+    </dependency>  
       
-    </dependency>
-    <dependency>
-      <groupId>org.codehaus.jackson</groupId>
-      <artifactId>jackson-mapper-asl</artifactId>
-      <version>1.9.11</version>
-    </dependency>
-    <dependency>
-      <groupId>javax.ws.rs</groupId>
-      <artifactId>jsr311-api</artifactId>
-      <version>1.1-ea</version>
-    </dependency>
-    <dependency>
-      <groupId>net.sf.ehcache</groupId>
-      <artifactId>ehcache-core</artifactId>
-      <version>2.4.6</version>
-      
-    </dependency>
-    <dependency>
-      <groupId>net.sf.ehcache</groupId>
-      <artifactId>ehcache</artifactId>
-      <version>1.2.3</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>hsqldb</groupId>
-      <artifactId>hsqldb</artifactId>
-      <version>1.8.0</version>
-      <scope>test</scope>
-    </dependency>
-    
-    <dependency>
-      <groupId>xmlunit</groupId>
-      <artifactId>xmlunit</artifactId>
-      <version>1.3</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-    	<groupId>commons-io</groupId>
-    	<artifactId>commons-io</artifactId>
-    	<version>2.4</version>
-    </dependency>
-
-    <dependency>
-    	<groupId>pentaho</groupId>
-    	<artifactId>mondrian</artifactId>
-    	<version>3.5.0</version>
-    </dependency>
-
-	<dependency>
-	    <groupId>org.olap4j</groupId>
-	    <artifactId>olap4j</artifactId>
-	    <version>1.0.1.539</version>
-	</dependency>
-
-    <dependency>
-    	<groupId>pentaho-reporting-engine</groupId>
-    	<artifactId>
-    		pentaho-reporting-engine-classic-core-platform-plugin
-    	</artifactId>
-    	<version>4.8.0-stable</version>
-    </dependency>
-    
-     <dependency>
-    	<groupId>pentaho-reporting-engine</groupId>
-    	<artifactId>
-    		pentaho-reporting-engine-classic-core
-    	</artifactId>
-    	<version>3.9.1-GA</version>
-    </dependency>
-     <dependency>
+        <dependency>
      	<groupId>commons-collections</groupId>
      	<artifactId>commons-collections</artifactId>
      	<version>3.2.1</version>
      </dependency>
+  
+      
+
     </dependencies>
+
+  
   
 </project>
