--- a/eudevfin/cda-wrapper/.classpath
+++ b/eudevfin/cda-wrapper/.classpath
@@ -27,5 +27,11 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/robochef-0.9.6.jar"/>
+	<classpathentry kind="src" output="target/classes" path="src/main/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
