--- a/eudevfin/cda-wrapper/pom.xml
+++ b/eudevfin/cda-wrapper/pom.xml
@@ -1,166 +1,188 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.devgateway.eudevfin</groupId>
-    <artifactId>integration</artifactId>
-    <version>0.0.1.CI-SNAPSHOT</version>
-  </parent>
-  <artifactId>cda-wrapper</artifactId>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.devgateway.eudevfin</groupId>
+		<artifactId>integration</artifactId>
+		<version>0.0.1.CI-SNAPSHOT</version>
+	</parent>
+	<artifactId>cda-wrapper</artifactId>
+
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.jvnet.staxex</groupId>
+				<artifactId>stax-ex</artifactId>
+				<version>1.1</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.ws.commons.neethi</groupId>
+				<artifactId>neethi</artifactId>
+				<version>2.0.1</version>
+				<type>jar</type>
+			</dependency>
+
+		</dependencies>
+	</dependencyManagement>
+	<dependencies>
+
+		<dependency>
+			<groupId>org.devgateway.eudevfin</groupId>
+			<artifactId>financial</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.devgateway.eudevfin</groupId>
+			<artifactId>common-auth</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>com.hazelcast</groupId>
+			<artifactId>hazelcast</artifactId>
+			<version>2.5</version>
+
+		</dependency>
+		<dependency>
+			<groupId>pentaho-library</groupId>
+			<artifactId>libbase</artifactId>
+			<version>1.2.8</version>
+
+		</dependency>
+
+		<dependency>
+			<groupId>pentaho-library</groupId>
+			<artifactId>libloader</artifactId>
+			<version>1.2.8</version>
+		</dependency>
+
+		<dependency>
+			<groupId>pentaho-library</groupId>
+			<artifactId>libserializer</artifactId>
+			<version>1.2.8</version>
+
+		</dependency>
+
+		<dependency>
+			<groupId>pentaho-library</groupId>
+			<artifactId>libformula</artifactId>
+			<version>1.2.8</version>
+
+		</dependency>
+
+
+		<dependency>
+			<groupId>pentaho-library</groupId>
+			<artifactId>libfonts</artifactId>
+			<version>1.2.8</version>
+
+		</dependency>
+
+		<dependency>
+			<groupId>pentaho-library</groupId>
+			<artifactId>libformat</artifactId>
+			<version>1.2.8</version>
+
+		</dependency>
+
+
+		<dependency>
+			<groupId>pentaho-library</groupId>
+			<artifactId>libpixie</artifactId>
+			<version>1.2.8</version>
+
+		</dependency>
+
+
+		<dependency>
+			<groupId>pentaho-library</groupId>
+			<artifactId>libdocbundle</artifactId>
+			<version>1.2.8</version>
+
+		</dependency>
+
+
+		<dependency>
+			<groupId>pentaho-library</groupId>
+			<artifactId>libxml</artifactId>
+			<version>1.2.8</version>
+
+		</dependency>
 
 
 
-  <repositories>
+		<dependency>
+			<groupId>pentaho-library</groupId>
+			<artifactId>librepository</artifactId>
+			<version>1.2.8</version>
 
-	
-  </repositories>
-  
-  <dependencyManagement>
-  <dependencies>
-  	<dependency>
-  		<groupId>org.jvnet.staxex</groupId>
-  		<artifactId>stax-ex</artifactId>
-  		<version>1.1</version>
-  	</dependency>
-
-  	<dependency>
-  		<groupId>org.apache.ws.commons.neethi</groupId>
-  		<artifactId>neethi</artifactId>
-  		<version>2.0.1</version>
-  		<type>jar</type>
-  	</dependency>
-
-  </dependencies>
-  </dependencyManagement>
-    <dependencies>
-    
-     	<dependency>
-      <groupId>org.devgateway.eudevfin</groupId>
-      <artifactId>financial</artifactId>
-      <version>${project.version}</version>
-    </dependency>    
-    
-    <dependency>
-      <groupId>org.devgateway.eudevfin</groupId>
-      <artifactId>common-auth</artifactId>
-      <version>${project.version}</version>
-    </dependency>    
+		</dependency>
 
 
-   <dependency>
-     	<groupId>pentaho</groupId>
-     	<artifactId>cda</artifactId>
-     	<version>5.0.1</version>
-     </dependency>
+		<dependency>
+			<groupId>pt.webdetails</groupId>
+			<artifactId>cpf-core</artifactId>
+			<version>13.09.10</version>
+		</dependency>
 
 
- <!-- 
-<dependency>
-     	<groupId>pentaho</groupId>
-     	<artifactId>cpf</artifactId>
-     	<version>5.0.1</version>
-     </dependency>
- -->
- 
-  
 
-    <dependency>
-      <groupId>com.hazelcast</groupId>
-      <artifactId>hazelcast</artifactId>
-      <version>2.5</version>
-      
-    </dependency>
-    <dependency>
-      <groupId>pentaho-library</groupId>
-      <artifactId>libbase</artifactId>
-      <version>1.2.8</version>
-      
-    </dependency>
+		<dependency>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+			<version>3.2.1</version>
+		</dependency>
 
-    <dependency>
-      <groupId>pentaho-library</groupId>
-      <artifactId>libloader</artifactId>
-      <version>1.2.8</version>      
-    </dependency>
-    
-    <dependency>
-      <groupId>pentaho-library</groupId>
-      <artifactId>libserializer</artifactId>
-      <version>1.2.8</version>
-      
-    </dependency>
-    
-    <dependency>
-      <groupId>pentaho-library</groupId>
-      <artifactId>libformula</artifactId>
-      <version>1.2.8</version>
-      
-    </dependency>
-    
-    
-    <dependency>
-      <groupId>pentaho-library</groupId>
-      <artifactId>libfonts</artifactId>
-      <version>1.2.8</version>
-      
-    </dependency>
-    
-        <dependency>
-      <groupId>pentaho-library</groupId>
-      <artifactId>libformat</artifactId>
-      <version>1.2.8</version>
-      
-    </dependency>
-    
-   
-            <dependency>
-      <groupId>pentaho-library</groupId>
-      <artifactId>libpixie</artifactId>
-      <version>1.2.8</version>
-      
-    </dependency>
+		<dependency>
+			<groupId>pentaho-reporting-engine</groupId>
+			<artifactId>
+        		pentaho-reporting-engine-classic-core-platform-plugin
+        	</artifactId>
+			<version>4.8.0-stable</version>
+		</dependency>
 
-    
-            <dependency>
-      <groupId>pentaho-library</groupId>
-      <artifactId>libdocbundle</artifactId>
-      <version>1.2.8</version>
-      
-    </dependency>
-    
-        
-            <dependency>
-      <groupId>pentaho-library</groupId>
-      <artifactId>libxml</artifactId>
-      <version>1.2.8</version>
-      
-    </dependency>
-    
-    
-            
-            <dependency>
-      <groupId>pentaho-library</groupId>
-      <artifactId>librepository</artifactId>
-      <version>1.2.8</version>
-      
-    </dependency>
-    
-    
-       <dependency>
-      <groupId>pt.webdetails</groupId>
-      <artifactId>cpf-core</artifactId>
-      <version>13.09.10</version>
-    </dependency>  
-      
-        <dependency>
-     	<groupId>commons-collections</groupId>
-     	<artifactId>commons-collections</artifactId>
-     	<version>3.2.1</version>
-     </dependency>
-  
-      
+		<dependency>
+			<groupId>pentaho-reporting-engine</groupId>
+			<artifactId>
+        		pentaho-reporting-engine-classic-core
+        	</artifactId>
+			<version>3.9.1-GA</version>
+		</dependency>
 
-    </dependencies>
+		<dependency>
+			<groupId>pt.webdetails</groupId>
+			<artifactId>cda-core</artifactId>
+			<version>13.09.10</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/cda-core-13.09.10.jar</systemPath>
+		</dependency>
 
-  
-  
+
+		<dependency>
+			<groupId>pentaho</groupId>
+			<artifactId>mondrian</artifactId>
+			<version>3.5.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>1.8.0.10</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.olap4j</groupId>
+			<artifactId>olap4j</artifactId>
+			<version>1.0.1.539</version>
+		</dependency>
+
+	</dependencies>
+
+
+
 </project>
