--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -260,7 +260,7 @@
 			<name>DG EU-DEVFIN Central Repo</name>
 			<url>http://artifactory.ampdev.net/artifactory/eudevfin/</url>
 			<snapshots>
-				<enabled>false</enabled>
+				<enabled>true</enabled>
 			</snapshots>
 		</repository>
 
