--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -200,6 +200,20 @@
   			<artifactId>simple-jndi</artifactId>
   			<version>0.11.4.1</version>
   		</dependency>
+  		
+  		
+  	<dependency>
+        <groupId>org.aspectj</groupId>
+        <artifactId>aspectjrt</artifactId>
+        <version>1.7.2</version>
+    </dependency>
+  		
+ 	<dependency>
+        <groupId>org.aspectj</groupId>
+        <artifactId>aspectjweaver</artifactId>
+        <version>1.7.2</version>
+    </dependency>  		
+  		
 	</dependencies>
 
 	<build>	
