configuration for jetty to run forked and start stop through maven

--- a/eudevfin/dim/pom.xml
+++ b/eudevfin/dim/pom.xml
@@ -70,6 +70,9 @@
                     <jvmArgs>-Xmx512M -XX:MaxPermSize=128M</jvmArgs>
                     <war>${basedir}/target/dim-${project.version}</war>
                     <scanIntervalSeconds>3</scanIntervalSeconds>
+                    <stopKey>chuck</stopKey>
+                    <stopPort>9999</stopPort>
+                    <stopWait>7</stopWait>                   
                     <webApp>
                         <contextPath>/</contextPath>
                     </webApp>
