--- a/eudevfin/financial/.project
+++ b/eudevfin/financial/.project
@@ -6,6 +6,11 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
+			<name>com.svcdelivery.liquibase.eclipse.LiquibaseBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
 			<name>org.eclipse.wst.common.project.facet.core.builder</name>
 			<arguments>
 			</arguments>
@@ -37,6 +42,7 @@
 		</buildCommand>
 	</buildSpec>
 	<natures>
+		<nature>com.svcdelivery.liquibase.eclipse</nature>
 		<nature>org.eclipse.jem.workbench.JavaEMFNature</nature>
 		<nature>org.eclipse.wst.common.modulecore.ModuleCoreNature</nature>
 		<nature>org.springframework.ide.eclipse.core.springnature</nature>
