--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -83,6 +83,12 @@
 			<version>1.7.5</version>
 		</dependency>		
 		
+		 <dependency>
+            <groupId>com.vaynberg.wicket.select2</groupId>
+            <artifactId>wicket-select2</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+		
   		<dependency>
   			<groupId>org.apache.wicket</groupId>
   			<artifactId>wicket-spring</artifactId>
