fixed module names

--- a/eudevfin/cda-wrapper/pom.xml
+++ b/eudevfin/cda-wrapper/pom.xml
@@ -9,6 +9,7 @@
 	</parent>
 	<artifactId>cda-wrapper</artifactId>
 
+	<name>EU-DEVFIN CDA Wrapper</name>
 
 	<dependencyManagement>
 		<dependencies>
