--- a/eudevfin/auth/pom.xml
+++ b/eudevfin/auth/pom.xml
@@ -21,5 +21,5 @@
     </dependency>    
     
   </dependencies>
-  <name>EU-DEVFIN authentication module</name>
+  <name>EU-DEVFIN Authentication</name>
 </project>
