--- a/eudevfin/common-auth/pom.xml
+++ b/eudevfin/common-auth/pom.xml
@@ -6,4 +6,5 @@
     <version>0.0.1.CI-SNAPSHOT</version>
   </parent>
   <artifactId>common-auth</artifactId>
+  <name>EU-DEVFIN Common Authentication</name>
 </project>
