--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -7,7 +7,7 @@
 	<artifactId>integration</artifactId>
 	<version>0.0.1.CI-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>EU DEVFIN</name>
+	<name>EU-DEVFIN Package</name>
 	<url>http://www.springframework.org</url>
 	<properties>
 		<maven.test.failure.ignore>true</maven.test.failure.ignore>
