--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -195,7 +195,8 @@
   			<groupId>org.eclipse.jetty</groupId>
   			<artifactId>jetty-util</artifactId>
   			<version>${jetty.version}</version>
-  		</dependency>
+  		</dependency>  	
+  		
   		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
@@ -225,6 +226,14 @@
 	<build>	
 		<plugins>
 
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.4</version>				
+			</plugin>
+								
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -247,6 +256,24 @@
 					<configuration>
 						<lifecycleMappingMetadata>
 							<pluginExecutions>
+
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.apache.maven.plugins</groupId>
+										<artifactId>maven-war-plugin</artifactId>
+										<versionRange>[2.0,)</versionRange>
+										<goals>
+											<goal>war</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<configurator>
+											<id>org.sonatype.m2e.webby.projectConfigurator</id>
+										</configurator>
+									</action>
+								</pluginExecution>
+							
+							
 								<pluginExecution>
 									<pluginExecutionFilter>
 										<groupId>
