--- a/eudevfin/cdf-wrapper/pom.xml
+++ b/eudevfin/cdf-wrapper/pom.xml
@@ -21,6 +21,16 @@
 
 
  	<name>EU-DEVFIN CDF Wrapper</name>
+ 	
+ 	<dependencies>
+ 	
+ 	<!-- Use JsMin and UglifyJs http://code.google.com/p/wro4j/wiki/Features -->
+ 	  <dependency>
+            <groupId>ro.isdc.wro4j</groupId>
+            <artifactId>wro4j-maven-plugin</artifactId>
+            <version>1.7.1</version>
+        </dependency>
+ 	</dependencies>
 
     <build>
         <resources>
@@ -29,5 +39,23 @@
                 <directory>src/main/resources</directory>
             </resource>
         </resources>
+        <plugins>
+        
+        <plugin>
+        		<!-- Run javascript qunit tests https://github.com/cjdev/qunit-mojo  -->
+         		<groupId>com.cj.qunit.mojo</groupId>
+                <artifactId>qunit-maven-plugin</artifactId>
+                <version>2.0.7</version>
+                <executions>
+                    <execution>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                    </execution>
+                </executions>
+        </plugin>
+        </plugins>
+        
     </build>
 </project>
