--- a/eudevfin/cdf-wrapper/pom.xml
+++ b/eudevfin/cdf-wrapper/pom.xml
@@ -22,16 +22,7 @@
 
  	<name>EU-DEVFIN CDF Wrapper</name>
  	
- 	<dependencies>
  	
- 	<!-- Use JsMin and UglifyJs http://code.google.com/p/wro4j/wiki/Features -->
- 	  <dependency>
-            <groupId>ro.isdc.wro4j</groupId>
-            <artifactId>wro4j-maven-plugin</artifactId>
-            <version>1.7.1</version>
-        </dependency>
- 	</dependencies>
-
     <build>
         <resources>
             <resource>
@@ -41,7 +32,34 @@
         </resources>
         <plugins>
         
+        	<!-- Use JsHint and UglifyJs http://code.google.com/p/wro4j/wiki/Features 
+        	http://web-resource-optimization.blogspot.fi/2011/03/build-time-javascript-code-analysis.html
+        	-->
+		<!-- 
+			<plugin>
+				<groupId>ro.isdc.wro4j</groupId>
+				<artifactId>wro4j-maven-plugin</artifactId>
+				<version>1.7.1</version>
+				<executions>
+					<execution>
+						<phase>compile</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<targetGroups>all</targetGroups>
+					<minimize>true</minimize>
+					<destinationFolder>${basedir}/src/main/webapp/wro/</destinationFolder>
+					<wroFile>${basedir}/src/main/webapp/WEB-INF/wro.xml</wroFile>					
+					<ignoreMissingResources>false</ignoreMissingResources>
+				</configuration>
+			</plugin>
+		
+		 -->               
         <plugin>
+					
         		<!-- Run javascript qunit tests https://github.com/cjdev/qunit-mojo  -->
          		<groupId>com.cj.qunit.mojo</groupId>
                 <artifactId>qunit-maven-plugin</artifactId>
