--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -376,6 +376,8 @@
         <module>common-auth</module>
         <module>cda-wrapper</module>
         <module>cdf-wrapper</module>
+        <module>exchange</module>
+        <module>common-exchange</module>
     </modules>
     <inceptionYear>2013</inceptionYear>
     <organization>
