--- a/eudevfin/cda-wrapper/.classpath
+++ b/eudevfin/cda-wrapper/.classpath
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" output="target/classes" path="src/main/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry excluding="**" kind="src" output="target/classes" path="src/main/resources">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
@@ -26,11 +32,9 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" output="target/classes" path="src/main/java">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/eudevfin-auth"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/eudevfin-common-auth"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/eudevfin-common-financial"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/eudevfin-financial"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
