--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -167,6 +167,11 @@
             <version>${spring.integration.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-http</artifactId>
+            <version>${spring.integration.version}</version>
+        </dependency>
+        <dependency>
             <groupId>de.agilecoders.wicket</groupId>
             <artifactId>wicket-bootstrap-core</artifactId>
             <version>${wicket.bootstrap}</version>
