fixed pom name for Exchange projects

--- a/eudevfin/common-exchange/pom.xml
+++ b/eudevfin/common-exchange/pom.xml
@@ -6,4 +6,5 @@
     <version>0.0.1.CI-SNAPSHOT</version>
   </parent>
   <artifactId>common-exchange</artifactId>
+  <name>EU-DEVFIN Common Exchange</name>
 </project>
