--- a/eudevfin/cda-wrapper/src/main/webapp/WEB-INF/web.xml
+++ b/eudevfin/cda-wrapper/src/main/webapp/WEB-INF/web.xml
@@ -5,18 +5,6 @@
 
 	<display-name>eudevfin-cda-wrapper</display-name>
 
-	<!--
-		Main configuration file for this Spring web application.
-	-->
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>
-			classpath*:**/*Cotext.xml
-		</param-value>
-	</context-param>
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
 	<servlet>
 		<servlet-name>restservices</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -27,31 +15,22 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
-	<!--
-		This Servlet mapping means that this Servlet will handle all incoming requests
-	 -->
 	<servlet-mapping>
 		<servlet-name>restservices</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	
-
-
-	<filter>
-		<filter-name>springSecurityFilterChain</filter-name>
-		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>springSecurityFilterChain</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>
-			classpath*:**/*Context.xml
-    	</param-value>
-	</context-param>
+  <listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>
+	/WEB-INF/*/auth*.jar!/*/authContext.xml
+    /WEB-INF/*/common-auth*.jar!/*/commonAuthContext.xml
+	classpath*:**/*Context.xml	
+	/WEB-INF/*/financial*.jar!/*/financialContext.xml
+	/WEB-INF/*/common-financial*.jar!/*/commonFinancialContext.xml
+    </param-value>
+  </context-param>
 </web-app>
