exchange s-i service (partial)

--- a/eudevfin/dim/pom.xml
+++ b/eudevfin/dim/pom.xml
@@ -42,6 +42,14 @@
 			<artifactId>financial</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.devgateway.eudevfin</groupId>
+			<artifactId>common-exchange</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		
+		
 
 		<dependency>
 			<groupId>org.devgateway.eudevfin</groupId>
