--- a/eudevfin/exchange/pom.xml
+++ b/eudevfin/exchange/pom.xml
@@ -22,6 +22,12 @@
 		<artifactId>financial</artifactId>
 		<version>${project.version}</version>
 	</dependency>
+	
+	<dependency>
+		<groupId>org.devgateway.eudevfin</groupId>
+		<artifactId>common-financial</artifactId>
+		<version>${project.version}</version>
+	</dependency>
 
 	<dependency>
 			<groupId>org.codehaus.jackson</groupId>
