added new common module, for commonly used utils, moved generic code for liquibase jpa invocation to it, and contexthelper

--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -411,6 +411,7 @@
         <module>cdf-wrapper</module>
         <module>exchange</module>
         <module>common-exchange</module>
+        <module>common</module>
     </modules>
     <inceptionYear>2013</inceptionYear>
     <organization>
