--- a/eudevfin/cdf-wrapper/pom.xml
+++ b/eudevfin/cdf-wrapper/pom.xml
@@ -22,6 +22,31 @@
 
  	<name>EU-DEVFIN CDF Wrapper</name>
  	
+ 	<dependencies>
+ 		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>5.5.0</version>
+		</dependency>
+		
+		<dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.9</version>
+        </dependency>
+        
+		<dependency>
+            <groupId>com.lowagie</groupId>
+            <artifactId>itext</artifactId>
+            <version>2.1.7</version>
+        </dependency>
+        
+        <dependency>
+			<groupId>pentaho</groupId>
+			<artifactId>mondrian</artifactId>
+			<version>3.5.0</version>
+		</dependency>            
+ 	</dependencies>
  	
     <build>
         <resources>
