--- a/eudevfin/cdf-wrapper/src/main/webapp/WEB-INF/web.xml
+++ b/eudevfin/cdf-wrapper/src/main/webapp/WEB-INF/web.xml
@@ -1,19 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  Copyright (c) 2013 Development Gateway.
-  All rights reserved. This program and the accompanying materials
-  are made available under the terms of the GNU Public License v3.0
-  which accompanies this distribution, and is available at
-  http://www.gnu.org/licenses/gpl.html
-  
-  Contributors:
-     mpostelnicu
--->
-<web-app xmlns="http://java.sun.com/xml/ns/javaee"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-  version="2.5"> 
+<!-- Copyright (c) 2013 Development Gateway. All rights reserved. This program 
+	and the accompanying materials are made available under the terms of the 
+	GNU Public License v3.0 which accompanies this distribution, and is available 
+	at http://www.gnu.org/licenses/gpl.html Contributors: mpostelnicu -->
+<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	version="2.5">
 
-  <display-name>eudevfin-cdf-wrapper</display-name>
-  
+	<display-name>eudevfin-cdf-wrapper</display-name>
+
+	<servlet>
+		<servlet-name>jasperreports</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value></param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>jasperreports</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
+
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>
+			/WEB-INF/*/auth*.jar!/*/authContext.xml
+	   		/WEB-INF/*/common-auth*.jar!/*/commonAuthContext.xml
+			classpath*:**/*Context.xml	
+			/WEB-INF/*/financial*.jar!/*/financialContext.xml
+			/WEB-INF/*/common-financial*.jar!/*/commonFinancialContext.xml
+		</param-value>
+	</context-param>
 </web-app>
