- created common module for common helper classes - refactored the liquibase JPA executor, now it is reusable and it autowires JPA entities before execute

--- a/eudevfin/dim/src/main/webapp/WEB-INF/web.xml
+++ b/eudevfin/dim/src/main/webapp/WEB-INF/web.xml
@@ -62,6 +62,7 @@
     <param-name>contextConfigLocation</param-name>
     <param-value>
 	/WEB-INF/*/auth*.jar!/*/authContext.xml
+	/WEB-INF/*/common*.jar!/*/commonContext.xml
     /WEB-INF/*/common-auth*.jar!/*/commonAuthContext.xml
 	classpath*:**/*Context.xml	
 	/WEB-INF/*/financial*.jar!/*/financialContext.xml
