--- a/eudevfin/auth/pom.xml
+++ b/eudevfin/auth/pom.xml
@@ -14,6 +14,12 @@
       <version>${project.version}</version>
     </dependency>    
     
+        <dependency>
+      <groupId>org.devgateway.eudevfin</groupId>
+      <artifactId>common</artifactId>
+      <version>${project.version}</version>
+    </dependency>    
+    
     <dependency>
       <groupId>org.devgateway.eudevfin</groupId>
       <artifactId>common-auth</artifactId>
