--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -236,6 +236,13 @@
             <artifactId>commons-dbcp</artifactId>
             <version>1.4</version>
         </dependency>
+        
+        <dependency>
+        	<groupId>commons-codec</groupId>
+        	<artifactId>commons-codec</artifactId>
+        	<version>1.8</version>
+        </dependency>
+
         <dependency>
             <groupId>simple-jndi</groupId>
             <artifactId>simple-jndi</artifactId>
@@ -255,6 +262,11 @@
             <version>1.7.4</version>
         </dependency>
 
+        <dependency>
+        	<groupId>xerces</groupId>
+        	<artifactId>xercesImpl</artifactId>
+        	<version>2.11.0</version>
+        </dependency>
     </dependencies>
 
     <build>
