various fixes to make network/embedded mode work with junit, and also found a missing jar when running cda junit test jaxrs-api

--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -269,6 +269,11 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.7.4</version>
         </dependency>
+        <dependency>
+        	<groupId>org.jboss.resteasy</groupId>
+        	<artifactId>jaxrs-api</artifactId>
+        	<version>3.0.5.Final</version>
+        </dependency>
 
         <dependency>
         	<groupId>xerces</groupId>
