moved common elements to the commonContext module, a dependency for all modules

--- a/eudevfin/cdf-wrapper/pom.xml
+++ b/eudevfin/cdf-wrapper/pom.xml
@@ -45,7 +45,14 @@
 			<groupId>pentaho</groupId>
 			<artifactId>mondrian</artifactId>
 			<version>3.5.0</version>
-		</dependency>            
+		</dependency>
+
+	<dependency>
+		<groupId>org.devgateway.eudevfin</groupId>
+		<artifactId>common</artifactId>
+		<version>${project.version}</version>
+	</dependency>
+		            
  	</dependencies>
  	
     <build>
