--- a/eudevfin/exchange/pom.xml
+++ b/eudevfin/exchange/pom.xml
@@ -29,6 +29,12 @@
 		<version>${project.version}</version>
 	</dependency>
 
+		<dependency>
+			<groupId>org.devgateway.eudevfin</groupId>
+			<artifactId>common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
 	<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
