--- a/eudevfin/cda-wrapper/pom.xml
+++ b/eudevfin/cda-wrapper/pom.xml
@@ -57,6 +57,13 @@
 			<version>${project.version}</version>
 		</dependency>
 
+
+     	<dependency>
+            <groupId>org.devgateway.eudevfin</groupId>
+            <artifactId>common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        
 		<dependency>
 			<groupId>org.devgateway.eudevfin</groupId>
 			<artifactId>financial</artifactId>
