--- a/eudevfin/common-auth/pom.xml
+++ b/eudevfin/common-auth/pom.xml
@@ -7,4 +7,14 @@
   </parent>
   <artifactId>common-auth</artifactId>
   <name>EU-DEVFIN Common Authentication</name>
+  
+  <dependencies>
+  
+       	<dependency>
+            <groupId>org.devgateway.eudevfin</groupId>
+            <artifactId>common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+  
+  </dependencies>
 </project>
