--- a/eudevfin/dim/pom.xml
+++ b/eudevfin/dim/pom.xml
@@ -32,6 +32,11 @@
             <version>${project.version}</version>
         </dependency>
 
+     	<dependency>
+            <groupId>org.devgateway.eudevfin</groupId>
+            <artifactId>common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.devgateway.eudevfin</groupId>
