--- a/eudevfin/cdf-wrapper/pom.xml
+++ b/eudevfin/cdf-wrapper/pom.xml
@@ -46,12 +46,18 @@
 			<artifactId>mondrian</artifactId>
 			<version>3.5.0</version>
 		</dependency>
-
-	<dependency>
-		<groupId>org.devgateway.eudevfin</groupId>
-		<artifactId>common</artifactId>
-		<version>${project.version}</version>
-	</dependency>
+		
+		<dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.4</version>
+        </dependency>
+        
+		<dependency>
+			<groupId>org.devgateway.eudevfin</groupId>
+			<artifactId>common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 		            
  	</dependencies>
  	
@@ -90,7 +96,7 @@
 			</plugin>
 		
 		 -->               
-        <plugin>
+        	<plugin>
 					
         		<!-- Run javascript qunit tests https://github.com/cjdev/qunit-mojo  -->
          		<groupId>com.cj.qunit.mojo</groupId>
@@ -104,7 +110,7 @@
                         </goals>
                     </execution>
                 </executions>
-        </plugin>
+			</plugin>
         </plugins>
         
     </build>
