--- a/eudevfin/cdf-wrapper/pom.xml
+++ b/eudevfin/cdf-wrapper/pom.xml
@@ -58,6 +58,12 @@
 			<artifactId>common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.devgateway.eudevfin</groupId>
+			<artifactId>common-auth</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 		            
  	</dependencies>
  	
