--- a/eudevfin/dim/pom.xml
+++ b/eudevfin/dim/pom.xml
@@ -58,6 +58,13 @@
 
         <dependency>
             <groupId>org.devgateway.eudevfin</groupId>
+            <artifactId>common-ui</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.devgateway.eudevfin</groupId>
             <artifactId>cdf-wrapper</artifactId>
             <version>${project.version}</version>
             <type>war</type>
@@ -77,13 +84,14 @@
             <type>war</type>
         </dependency>
         
+        <!-- 
         <dependency>
             <groupId>org.devgateway.eudevfin</groupId>
             <artifactId>saikuui</artifactId>
             <version>${project.version}</version>
             <type>war</type>
         </dependency>
-
+ 		-->
     </dependencies>
 
     <build>
