more attempts at beanifying the navbar

--- a/eudevfin/cdf-wrapper/pom.xml
+++ b/eudevfin/cdf-wrapper/pom.xml
@@ -59,6 +59,13 @@
 			<version>${project.version}</version>
 		</dependency>
 		
+		   
+		<dependency>
+			<groupId>org.devgateway.eudevfin</groupId>
+			<artifactId>common-ui</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.devgateway.eudevfin</groupId>
 			<artifactId>common-auth</artifactId>
